--- a/WeatherApp/weather/templates/weather/index.html
+++ b/WeatherApp/weather/templates/weather/index.html
@@ -6,7 +6,32 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Приложение для прогноза погоды</h1>
-
+<header class="site-header sticky-top py-1">
+  <nav class="container d-flex flex-column flex-md-row justify-content-between">
+    <a class="py-2" href="#" aria-label="Product">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Погода</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>
+        <span class="fs-4">Погода</span>
+    </a>
+    <a class="py-2 d-none d-md-inline-block" href="/">Главная страница</a>
+    <a class="py-2 d-none d-md-inline-block" href="#">Информация</a>
+  </nav>
+</header>
+<div class="container mt-5">
+    <div row="row">
+        <div class="col-5 offset">
+            <form action="">
+                <label for="city">Город</label>
+                <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
+                <input type="submit" name="send" value="Поиск" class="mt-2 btn btn-danger">
+            </form>
+            <div class="col-4 offset-1">
+                <h1>Информация</h1>
+                <div class="alert alert-danger">
+                    Погода в Минске
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
