--- a/WeatherApp/weather/templates/weather/index.html
+++ b/WeatherApp/weather/templates/weather/index.html
@@ -17,17 +17,25 @@
   </nav>
 </header>
 <div class="container mt-5">
-    <div row="row">
+    <div class="row">
         <div class="col-5 offset">
             <form action="">
                 <label for="city">Город</label>
                 <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
-                <input type="submit" name="send" value="Поиск" class="mt-2 btn btn-danger">
+                <input type="submit" name="send" value="Поиск" class="mt-2 btn btn-primary">
             </form>
-            <div class="col-4 offset-1">
+            <div class="col-6 offset-1">
                 <h1>Информация</h1>
-                <div class="alert alert-danger">
-                    Погода в Минске
+                <div class="alert alert-primary">
+                    <div class="row">
+                        <div class="col-6">
+                            <b>Город </b>{{ info.city }}<br>
+                            <b>Температура</b>{{ info.temp }}<sup>o</sup><br>
+                        </div>
+                        <div class="col-4 offset-2">
+                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="Фото погоды" class="img-thunbnail">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
