--- a/WeatherApp/weather/templates/weather/index.html
+++ b/WeatherApp/weather/templates/weather/index.html
@@ -8,9 +8,13 @@
 <body>
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2" href="#" aria-label="Product">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Погода</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>
-        <span class="fs-4">Погода</span>
+    <a class="py-2" href="/" aria-label="Product">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24">
+          <title>Погода</title>
+          <circle cx="12" cy="12" r="10"></circle>
+          <path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path>
+      </svg>
+        <span class="fs-3">Погода</span>
     </a>
     <a class="py-2 d-none d-md-inline-block" href="/">Главная страница</a>
     <a class="py-2 d-none d-md-inline-block" href="#">Информация</a>
@@ -18,25 +22,30 @@
 </header>
 <div class="container mt-5">
     <div class="row">
-        <div class="col-5 offset">
-            <form action="">
+        <div class="col-6 offset-1">
+            <form action="" method="post">
+                {% csrf_token %}
                 <label for="city">Город</label>
-                <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
-                <input type="submit" name="send" value="Поиск" class="mt-2 btn btn-primary">
+                {{ form.name }}
+
+                <input type="submit" name="send" id="Поиск" class="mt-2 btn-danger">
             </form>
-            <div class="col-6 offset-1">
+            <div class="col-8 offset-11">
                 <h1>Информация</h1>
-                <div class="alert alert-primary">
+
+                {% for info in all_info %}
+                <div class="alert alert-info">
                     <div class="row">
-                        <div class="col-6">
-                            <b>Город </b>{{ info.city }}<br>
-                            <b>Температура</b>{{ info.temp }}<sup>o</sup><br>
+                        <div class="col-7">
+                            <b>Город: </b>{{ info.city }}<br>
+                            <b>Температура: </b>{{ info.temp }}<sup>o</sup><br>
                         </div>
-                        <div class="col-4 offset-2">
-                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="Фото погоды" class="img-thunbnail">
+                        <div class="col-3 offset-1">
+                            <img src="http://openweathermap.org/img/w/{{ info.icon }}.png" alt="Фото погоды">
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
